--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     juntitos</p>
 
                 <div class="image-container">
-                    <img src="./img/fotito3.PNG" alt="Imagen de la novia" />
+                    <img src="./img/fotito3.PNG" alt="Fotito" />
                 </div>
                 <p style="padding: 2px; position: relative;">Por más días como este</p>
 
