--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                     juntitos</p>
 
                 <div class="image-container">
-                    <img src="./img/fotito3.PNG" alt="Fotito" />
+                    <img src="./img/fotito3.png" alt="Fotito" />
                 </div>
-                <p style="padding: 2px; position: relative;">Por más días como este</p>
+                <p class="caption">Por más días como este</p>
 
                 <a class="open-modal" href="#open-modal">
                     <svg class="heart btn" viewBox="0 0 32 29.6">
