--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     juntitos</p>
 
                 <div class="image-container">
-                    <img src="./img/fotito3.PNG" alt="Fotito" />
+                    <img src="./img/fotito3.png" alt="Fotito" />
                 </div>
                 <p class="caption">Por más días como este</p>
 
