--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body id="body">
+    <div class="audio-container">
+        <audio id="audio" controls>
+            <source src="./music/ojitos.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+        </audio>
+    </div>
     <div class="content">
         <div class="letter">
             <div class="intro">
@@ -17,12 +23,10 @@
                         hermosa y única como tú.</strong></p>
                 <p>Gracias por hacer mis días tan bonitos a pesar de la distancia, <br> espero que pronto podamos estar
                     juntitos</p>
-
                 <div class="image-container">
-                    <img src="./img/fotito3.png" alt="Fotito" />
+                    <img src="./img/fotito3.PNG" alt="Fotito" />
                 </div>
                 <p class="caption">Por más días como este</p>
-
                 <a class="open-modal" href="#open-modal">
                     <svg class="heart btn" viewBox="0 0 32 29.6">
                         <path
@@ -44,6 +48,7 @@
             </div>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 
 </html>
