--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <p>Gracias por hacer mis días tan bonitos a pesar de la distancia, <br> espero que pronto podamos estar
                     juntitos</p>
                 <div class="image-container">
-                    <img src="./img/fotito3.PNG" alt="Fotito" />
+                    <img src="./img/fotito3.png" alt="Fotito" />
                 </div>
                 <p class="caption">Por más días como este</p>
                 <a class="open-modal" href="#open-modal">
